<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="mealdetails2">mealDetails:</string>
    <string name="app_name">RFW</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="YouSuretoexit">you sure to exit?</string>
    <string name="No">No</string>
    <string name="Yes">Yes</string>
    <string name="Confirm">Confirm</string>
    <string name="Cancel">Cancel</string>
    <string name="Arabic">Arabic</string>
    <string name="English" translatable="false">English</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Fieldcantbeempty">Field cant be empty</string>
    <string name="charity">charity</string>
    <string name="person">person</string>
    <string name="login2">login</string>
    <string name="type_message">Type Message</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="welcome">welcome</string>
    <string name="create_your_account">create your account</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="enteremail">enter email!</string>
    <string name="wrongpassword">enter password!</string>
    <string name="or_sign_up_with">or sign up with</string>
    <string name="donot_have_account">Donot have account ?</string>
    <string name="sign_up">sign up</string>
    <string name="forget_password">forget password?</string>
    <string name="sharefoodfor">share food for</string>
    <string name="Home">Home</string>
    <string name="profile">profile</string>
    <string name="language">language</string>
    <string name="about">About us</string>
    <string name="favorites">favorites</string>
    <string name="logout">logout</string>
    <string name="Ocassion">Ocassion"</string>
    <string name="Restaurant">Restaurant</string>
    <string name="Hotel">Hotel</string>
    <string name="sharefood">share food</string>
    <string name="send">send</string>
    <string name="enter_your_email_address_below_toreceive_password_sent_instruction">Enter your email address below toreceive password sent instruction</string>
    <string name="chooseyourorderstate">choose your order state</string>
    <string name="removed">removed</string>
    <string name="apply">apply</string>
    <string name="normalafterwaiting">normal after waiting</string>
    <string name="Hi_dear">Hi,dear!</string>
    <string name="First_we_need_to_Know_your_location">First we need to Know your location</string>
    <string name="To_show_you_nearby_listing_And_how_many_neighbours_are_waiting_to_share_with_you">To show you nearby listing And how many neighbours are waiting to share with you</string>
    <string name="btnOK_lets_go">OK,lets go</string>
    <string name="textforLocation">Set your Location</string>
    <string name="textshareloction">Dont worry,we wont share this with anyone else.</string>
    <string name="edithintsearchhere">Search here </string>
    <string name="searchinFragment">Search here by mealName </string>
    <string name="btnforlocation">set home location</string>
    <string name="txt_loction_for_people_near_by">See how many people are near you ...</string>
    <string name="show_people">showing the nearest 50 withen(</string>
    <string name="near_you">near you</string>
    <string name="num_of_people">1</string>
    <string name="btn_next">next</string>
    <string name="txt_profile">My Profile</string>
    <string name="edit_yourname_profile">Your Name </string>
    <string name="enter_yourname_profile">enter your name ! </string>
    <string name="edit_Email_profile">Email</string>
    <string name="enter_youemail_profile">enter your email ! </string>
    <string name="edit_number_profile">Your Number</string>
    <string name="enter_number_profile"> enter Your Number !</string>
    <string name="btn_profile">Create</string>
    <string name="title_activity_maps_set_location">MapsSetLocation</string>
    <string name="title_activity_maps_loction_for_near_by">MapsLoctionForNearBy</string>
    <string name="edit_enter_message_chat">Enter Message</string>
    <string name="btn_send_chat">Send</string>
    <string name="txt_June_10_item">June 10</string>
    <string name="txt_User_Icon_item">User Icon</string>
    <string name="txt_John_Grady_Cole_item">John Grady Cole</string>
    <string name="txt_send_Hi_Menaa_item">Hi Menaa,</string>
    <string name="txt_time_item">8:00</string>
    <string name="txt_response_Hi_item">Hi ,</string>
    <string name="text1" tools:ignore="MissingTranslation">Success!</string>
    <string name="text2" tools:ignore="MissingTranslation"> you have successfully</string>
    <string name="text3" tools:ignore="MissingTranslation,TypographyEllipsis">Remember...</string>
    <string name="text4" tools:ignore="MissingTranslation">Be friendly And polite</string>
    <string name="text5" tools:ignore="MissingTranslation">sharing is more fun for</string>
    <string name="text6" tools:ignore="MissingTranslation">everyone this way</string>
    <string name="button_bt1" tools:ignore="MissingTranslation">Next</string>
    <string name="text7" tools:ignore="MissingTranslation">Error!</string>
    <string name="text8" tools:ignore="MissingTranslation">Ooops,something went wrong</string>
    <string name="button_bt" tools:ignore="MissingTranslation">tRY AGAIN</string>
    <string name="Text" tools:ignore="MissingTranslation">create new password</string>
    <string name="TextL" tools:ignore="MissingTranslation">your new password must be different from </string>
    <string name="TextO" tools:ignore="MissingTranslation">previous used passwords</string>
    <string name="EditText" tools:ignore="MissingTranslation">new password</string>
    <string name="EditText1" tools:ignore="MissingTranslation">confirmpassword</string>
    <string name="button2" tools:ignore="MissingTranslation">CREATE</string>
    <string name="chick_mail">Chick your email</string>
    <string name="password1">We have sent a password recover instruction</string>
    <string name="ok_button">add</string>
    <string name="share_food">Share Food</string>
    <string name="up_photo">Upload photo</string>
    <string name="title">foodTitel</string>
    <string name="detail">foodDetail</string>
    <string name="location">location</string>
    <string name="person1">the number of people:</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="num">1</string>
    <string name="share_food_bt">Share Food</string>
    <string name="Smoking_rolling_paper" translatable="false">Smoking Rolling Paper</string>
    <string name="tv1">0</string>
    <string name="tv2">Like</string>
    <string name="tv3">Share</string>
    <string name="tv4">Mostafa</string>
    <string name="tv5" translatable="false">Smoking rolling paper</string>
    <string name="tv6">Person</string>
    <string name="tv7">Added 2 weaks ago</string>
    <string name="tv8">King size with tips</string>
    <string name="tv9">Pick up size</string>
    <string name="tv10">Any time</string>
    <string name="tv11">Requst This</string>
    <string name="add" translatable="false">add</string>
    <string name="call_us">Call Us</string>
    <string name="we_are_happy_to_recive_your_comments_and_suggestion">We are happy to recive your comments</string>
    <string name="call">Call</string>
    <string name="user_name">User Name</string>
    <string name="e_mail">E-mail</string>
    <string name="phone_number">Phone Number</string>
    <string name="the_reason">The reason</string>
    <string name="send_bt">Send</string>
    <string name="go">Go</string>
    <string name="for_privacy_listing_are_fuzed_up_to_200m" translatable="false">For privacy , listing are fuzed up to 200m</string>
    <string name="title_activity_maps">title_activity_maps</string>
    <string name="activity_main">Sign up</string>
    <string name="t1">Welcome!</string>
    <string name="t2">Create your account</string>
    <string name="username1">username</string>
    <string name="password2">Password</string>
    <string name="confirm_password">confirmPassword</string>
    <string name="email">email</string>
    <string name="text">you must enter mail!</string>
    <string name="htext1">you must enter name!</string>
    <string name="htext2">you must enter strong pasword!</string>
    <string name="sign_up1">Sign Up</string>
    <string name="signup_with">or sign up with</string>
    <string name="use_as">Use program as :</string>
    <string name="radio_btn1"> Food doner</string>
    <string name="radio_btn2">SomeOne need food</string>
    <string name="btn3">send</string>
    <string name="tx1">Mostafa</string>
    <string name="request">Reguest successfully (:</string>
    <string name="tx2">Smoking rolling paper</string>
    <string name="distance">106.4km away</string>
    <string name="t3">Hi mostafa</string>
    <string name="send1">Send</string>
    <string name="active">active</string>
    <string name="title_activity_map_set_location" tools:ignore="MissingTranslation">MapSetLocation</string>
    <string name="and_suggestion">and suggestion</string>
    <string name="the_e_mail">The E-mail</string>
    <string name="to_your_email">to your email</string>
    <string name="request_this">request</string>
    <string name="decide_who_needs_food">
Who needs food?</string>
    <string name="you_must_choose">You must choose !</string>
    <string name="create_new_password">create new password</string>
    <string name="your_new_password_must_be_different_from">Your new password must be different from</string>
    <string name="previous_used_passwords">previous used passwords</string>
    <string name="new_password">new password</string>
    <string name="confirmpassword">confirm password</string>
    <string name="create">create</string>
    <string name="requred_field">requred field</string>
    <string name="requred_field1">requred field</string>
    <string name="don_t_match">Don\'t match</string>
    <string name="resend_an_e_mail">Resend an E-mail ?</string>
    <string name="_00_01_00">00:01:00</string>
    <string name="gmail_com">****@gmail.com</string>
    <string name="don_t_match_the_constraint"> The password don\'t match the constraint !</string>
    <string name="don_t_match_the_constraint1"> The E-mail don\'t match the constraint !</string>
    <string name="new_pass"> The new password must contain any character and,any special character like : "#$%@"</string>
    <string name="new_pass1">, no white space , and at least five character </string>
    <string name="add_the_e_mail_pleas">Add the E-mail pleas!</string>
    <string name="pleas_provide_valid_e_mail">Pleas provide valid E-mail</string>
    <string name="resend_the_e_mail">Resend the E=mail?</string>
    <string name="facebook_app_id" translatable="false">720565802405343</string>
    <string name="fb_login_protocol_scheme">fb720565802405343</string>
    <string name="facebook_client_token">c66ecc0efa51312eb95845ad0f1a38b3</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remember">Remember...</string>
    <string name="save">save</string>
    <string name="near">See how many people are near you ...</string>
    <string name="nearYou2">showing the nearest 50 places</string>
    <string name="next2">next</string>
</resources>