<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.reducefoodewaste.Ui.UseAppAsDonerOrNeedFoodActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/shape_useas"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/black"
        android:padding="10dp"
        android:text="@string/use_as"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="327dp"
        android:layout_height="101dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:background="@drawable/shape_useas"
            android:fontFamily="sans-serif-black"
            android:text="@string/radio_btn1"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_useas"
            android:fontFamily="sans-serif-black"
            android:text="@string/radio_btn2"
            android:textSize="14sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/use_as_textview_invalid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/you_must_choose"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="32dp"
        android:textAllCaps="false"
        android:backgroundTint="@color/teal_200"
        android:fontFamily="sans-serif"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/btn3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/use_as_textview_invalid" />

</androidx.constraintlayout.widget.ConstraintLayout>