<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.example.reducefoodewaste.Fragments.ProfileFragment">

    <FrameLayout
        android:layout_marginTop="5dp"
        android:layout_width="220dp"
        android:layout_height="180dp"
        android:layout_gravity="center">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/profileFragment_image_photo"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="bottom|center_horizontal"
            android:src="@drawable/camera"
            app:civ_border_color="@color/white"
            app:civ_border_width="4dp"
            app:civ_shadow_radius="10dp" />



    </FrameLayout>

    <EditText
        android:id="@+id/profileFragment_edittext_username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="23dp"
        android:background="@drawable/shape_for_login"
        android:drawableStart="@drawable/person"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/username1"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/profileFragment_edittext_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="23dp"
        android:background="@drawable/shape_for_login"
        android:drawableStart="@drawable/lock1"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/password2"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/profileFragment_edittext_confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="23dp"
        android:background="@drawable/shape_for_login"
        android:drawableStart="@drawable/lock1"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="15dp"/>

    <EditText
        android:id="@+id/profileFragment_edittext_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="23dp"
        android:background="@drawable/shape_for_login"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"/>

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="70dp"
        android:backgroundTint="@color/teal_200"
        android:fontFamily="sans-serif"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/save"
        android:textAllCaps="false"/>

</LinearLayout>

