<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="com.example.reducefoodewaste.Maps.NearbyPlacesLocationMap">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="40dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:fontFamily="sans-serif-black"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:text="@string/near"
        android:textSize="16sp" />

    <fragment
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:id="@+id/map"
        tools:context=".MapsActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:text="@string/nearYou2"
       android:textColor="@color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/mapssetlocnear_button_btn1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="10dp"
        android:background="@color/teal_200"
        android:fontFamily="sans-serif"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:text="@string/next2"
        android:textColor="@color/white" />

</LinearLayout>
</ScrollView>