<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.reducefoodewaste.Authentication.ForgetpasswordActivity">

    <ImageView
        android:id="@+id/lock_imageView_im1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitCenter"
        android:src="@drawable/forgot"
        app:layout_constraintBottom_toTopOf="@+id/forgetpassword_textView_t1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgetpassword_textView_t1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/forget_password"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintBottom_toTopOf="@+id/forgetpassword_textView_t2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lock_imageView_im1" />

    <TextView
        android:id="@id/forgetpassword_textView_t2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="12dp"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/enter_your_email_address_below_toreceive_password_sent_instruction"
        app:layout_constraintTop_toBottomOf="@id/forgetpassword_textView_t1"/>

    <EditText
        android:id="@+id/forgetpassword_edittext_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_for_login"
        android:drawableStart="@drawable/iconemail"
        android:drawablePadding="7dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/gmail_com"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:maxLines="1"
        android:minHeight="48dp"
        android:padding="10dp"
        android:paddingStart="10dp"
        android:textColor="#A9A9A9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetpassword_textView_t2" />


    <Button
        android:id="@+id/forgetpassword_button_t1"
        android:layout_width="@dimen/_190sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="328dp"
        android:backgroundTint="@color/teal_200"
        android:fontFamily="sans-serif"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       />

    <TextView
        android:id="@+id/forgetpassword_textview4_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/add_the_e_mail_pleas"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.366" />

    <TextView
        android:id="@+id/forgetpassword_textview5_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/pleas_provide_valid_e_mail"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.408" />

</androidx.constraintlayout.widget.ConstraintLayout>