<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="40dp"
    tools:context="com.example.reducefoodewaste.Maps.CurrentLocationMap">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:text="@string/textforLocation"
        android:fontFamily="sans-serif-black"
        android:textSize="14dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="10dp"
        android:text="@string/textshareloction"
     android:gravity="center"
        android:layout_gravity="center"
        android:textSize="14dp"
        android:fontFamily="sans-serif-black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/main_edtT_search"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/shape_for_login"
        android:drawableLeft="@drawable/ic_baseline_search_24"
        android:drawablePadding="10dp"
        android:hint="@string/edithintsearchhere"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingStart="15dp"
        android:fontFamily="sans-serif-black"
        android:textColorHighlight="@color/white"/>

    <fragment
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:id="@+id/map"
        tools:context=".MapsActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment"/>

    <TextView
        android:id="@+id/txt_loc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/activity_map_set_location_button_sethomelocation"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="70dp"
        android:background="@color/teal_200"
        android:fontFamily="sans-serif"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:text="@string/btnforlocation" />

</LinearLayout>
