<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.reducefoodewaste.Maps.InstructionsLocation">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="60dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/give3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="110dp"
        android:layout_height="32dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/Hi_dear"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="216dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:minLines="2"
        android:text="@string/First_we_need_to_Know_your_location"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="330dp"
        android:layout_height="124dp"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:minLines="3"
        android:text="@string/To_show_you_nearby_listing_And_how_many_neighbours_are_waiting_to_share_with_you"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <Button
        android:id="@+id/first_page_button_ok_lets_go"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/teal_200"
        android:textAllCaps="false"
        android:fontFamily="sans-serif-black"
        android:text="@string/btnOK_lets_go"
        android:textSize="16dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>